--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-router-dom": "^6.14.0",
     "react-tsparticles": "^2.10.1",
     "react-wavify": "^1.8.3",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "tsparticles": "^2.10.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
