--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.10.1",
     "react-particles": "^2.10.1",
     "react-router-dom": "^6.14.0",
+    "react-simple-typewriter": "^5.0.1",
     "react-tsparticles": "^2.10.1",
     "react-wavify": "^1.8.3",
     "sort-by": "^1.2.0",
