--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.10.1",
     "react-particles": "^2.10.1",
     "react-router-dom": "^6.14.0",
+    "react-scroll": "^1.8.9",
     "react-simple-typewriter": "^5.0.1",
     "react-tsparticles": "^2.10.1",
     "react-wavify": "^1.8.3",
