--- a/public/projects.json
+++ b/public/projects.json
@@ -1,7 +1,7 @@
 {
     "projects": [
         {
-            "image": "/src/assets/marvelFigures.png",
+            "image": "https://i.ibb.co/LtPX47g/marvel-Figures.png",
             "name": "Marvel Figures | E-commerce website",
             "about": "An online action figure marketplace, where collectors and enthusiasts can buy and sell a wide variety of action figures. Our website provides a convenient platform for users to list their action figures for sale and browse through the available collection. With easy-to-use features, users can effortlessly add, edit, and manage their listings, ensuring accurate and up-to-date information.",
             "technologies": [
@@ -20,7 +20,7 @@
             "serverCode": "https://github.com/rakib8680/Marvel-Figures-Server"
         },
         {
-            "image": "/src/assets/languageVio.png",
+            "image": "https://i.ibb.co/y84jKmx/language-Vio.png",
             "name": "Language Vio | Learning Website",
             "about": "An online language learning website, your gateway to mastering languages from the comfort of your own home. Discover a wide range of language classes tailored to your proficiency level and learning style. Whether you're a beginner or advanced learner, our platform provides a seamless and engaging learning experience.",
             "technologies": [
@@ -39,7 +39,7 @@
             "serverCode": "https://github.com/rakib8680/LanguageVio-Server"
         },
         {
-            "image": "/src/assets/kitchenMaster.png",
+            "image": "https://i.ibb.co/cc4ZVFK/kitchen-Master.png",
             "name": "Kitchen Master | Recipe Website",
             "about": "A celebration of the rich tapestry of Indian cuisine and the talented chefs who bring it to life. Explore the world of Indian culinary artistry as you browse through a collection of renowned chefs and their top recipes. From traditional favorites to innovative creations, our website offers a culinary journey that captures the essence of India's diverse flavors and culinary heritage.",
             "technologies": [
@@ -68,7 +68,7 @@
                 "Firebase"
             ],
             "flex": "flex-row-reverse",
-            "liveLink": "https://build-career.surge.sh/",
+            "liveLink": "https://build-career.surge.sh/",   
             "clientCode": "https://github.com/rakib8680/Build-Career",
             "serverCode": "https://github.com/rakib8680/Build-Career"
         }
